# COFFEE

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  LICENSE.md  README.md  build.sh  configmap.yaml  create_performance_migration.py  deployment-app.yaml  deployment-db.yaml  docker-build.sh  docker-compose.demo.yml  docker-compose.yml  generate-configmap.sh  gunicorn-cfg.dev.py  gunicorn-cfg.prod.py  manage.py  models.dot  optimized_views.py  performance_analysis.md  podman-deployment.yaml  pvc.yaml  pyproject.toml  requirements.txt  run-podman.sh  start-ollama.sh  test_translations.py
.github/: release.yml  release_template.md
.github/workflows/: ci.yml  docker.yml
coffee/core/: asgi.py  settings.py  urls.py  wsgi.py
coffee/core/formats/: __init__.py
coffee/home/: admin.py  apps.py  azure_ai_api.py  context_processors.py  forms.py  llm_backends.py  models.py  ollama_api.py  registry.py  urls.py  validations.py  validators.py
coffee/home/admin/: __init__.py  basics.py  llm_model.py  llm_provider.py
coffee/home/ai_provider/: azure_ai_api.py  azure_openai_api.py  configs.py  llm_provider_base.py  models.py  ollama_api.py  token_estimator.py
coffee/home/migrations/: 0002_feedbacksession_nps_score.py  0005_criteria_course_task_course.py  0006_criteria_active.py  0007_feedbacksession_session_key_and_more.py  (+11 more)
core/: settings.py  urls.py
home/: azure_openai_api.py  context_processors.py  llm_backends.py  mixins.py  models.py  ollama_api.py  tests.py  urls.py  views.py
home/migrations/: 0001_initial.py  0003_alter_feedbacksession_nps_score.py  0004_course_managing_groups.py  0005_criteria_course_task_course.py  0008_alter_feedbacksession_nps_score.py  0010_performance_indexes_20250717_161343.py  0011_alter_feedbacksession_options_alter_course_active_and_more.py
k8s/: README.md  configmap.template.yaml  ingress.template.yaml
k8s/templates/: configmap.template.yaml  deploy.template.sh  ingress.template.yaml
static/css/: custom.css  soft-ui-dashboard.css
(+78 files in other folders)
